--- a/table/templates/table/index.html
+++ b/table/templates/table/index.html
@@ -76,7 +76,7 @@
             <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
-                <h5 class="modal-title" id="myModalLabel"></h5>
+                <h5 class="modal-title" id="myModalLabel">Alerta(s)</h5>
                 </div>
                 <div class="modal-body" id="modalBody">
                 <!-- Aqui será exibido o conteúdo das mensagens -->
