--- a/table/templates/table/index.html
+++ b/table/templates/table/index.html
@@ -26,7 +26,7 @@
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="{% static 'table/css/styles.css' %}">
+    <link rel="stylesheet" href="{% static 'table/css/index.css' %}">
 
     {%load static %}
     <script type="text/javascript"> window.CSRF_TOKEN = "{{ csrf_token }}"; </script>
