--- a/table/templates/table/menu.html
+++ b/table/templates/table/menu.html
@@ -55,6 +55,11 @@
             {% csrf_token %}
             <button type="submit" class="mt-3 btn btn-success">Baixar</button>
         </form>
+        {% comment %}         
+        <form method="POST" action="{% url 'listar_pendencias'%}">
+            {% csrf_token %}
+            <button type="submit" class="mt-3 btn btn-success">Pendências</button>
+        </form> {% endcomment %}
 
     </div>
 
