design do pop-up

--- a/table/templates/table/index.html
+++ b/table/templates/table/index.html
@@ -126,6 +126,23 @@
             </tbody>
         </table>
         
+        <button id="showPopup">Mostrar Pop-up</button>
+
+        <div id="popup" class="popup">
+            <div class="popup-content">
+                <span id="closePopup" class="close">&times;</span>
+                <h4>Atribua até 3 professores para a disciplina:</h2>
+                <p>Professor:</p>
+                <input type="text" class="professor_rp" id="campo1" placeholder="Professor">
+                <p>Professor:</p>
+                <input type="text" class="professor_rp" id="campo2" placeholder="Professor">
+                <p>Professor:</p>
+                <input type="text" class="professor_rp" id="campo3" placeholder="Professor">
+                <input type="submit" class="btn btn-primary" id="submitForm" value="Salvar">
+            </div>
+        </div>
+
+
 
         <div class="container">
             <div class="row">
