--- a/table/static/table/css/index.css
+++ b/table/static/table/css/index.css
@@ -32,3 +32,56 @@
 .materia-cb-bloqueada {
     background-color: #92909078;
 }
+
+/* controle do pop-up de RP */
+.popup {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    font-family: inherit;
+}
+
+.popup-content {
+    display: flex;
+    flex-direction: column;
+    background-color: #fff;
+    width: 50%;
+    max-width: 400px;
+    margin: 100px auto;
+    padding: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    position: relative;
+    border-radius: 10px;
+    border: 5px solid gray;
+}
+
+.popup-content > p {
+    margin: 1%;
+    padding: 0;
+    font-size: 1.2em;
+}
+
+.professor_rp {
+    margin: 1%;
+    border: 2px solid black;
+    border-radius: 3px;
+    font-size: large;
+}
+
+#submitForm {
+    width: 50%;
+    margin: auto;
+    margin-top: 5%;
+}
+
+.close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 24px;
+    cursor: pointer;
+}
