--- a/table/templates/table/menu.html
+++ b/table/templates/table/menu.html
@@ -7,61 +7,193 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'table/css/styles.css' %}">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <title>Menu</title>
 </head>
 <body>
-    <div style="width:50%;" class="mx-auto">
-        <h4>Menu para seleção da tabela correspondente ao semestre</h4>
-        <form id="semestreCurso" method="post" action = "redirect" >
-            {% csrf_token %}
-            <div class="form-group">
-                <label for="select1">Selecione o semestre do curso...</label>
-                <select required="required" class="form-control" name="select1" id="select1">
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                    <option value="4">4</option>
-                    <option value="5">5</option>
-                    <option value="6">6</option>
-                    <option value="7">7</option>
-                    <option value="8">8</option>
-                </select>
+    <div style="width:90%;" class="mx-auto">
+        <div class="container mt-4 mb-4">
+            <div class="row">
+                <div class="col-sm-5">
+                    <h5>Menu para seleção da tabela correspondente ao semestre</h5>
+                    <form id="semestreCurso" method="post" action = "redirect" >
+                        {% csrf_token %}
+                        <div class="form-group">
+                            <label for="select1">Selecione o semestre do curso...</label>
+                            <select required="required" class="form-control" name="select1" id="select1">
+                                <option value="1">1</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                                <option value="4">4</option>
+                                <option value="5">5</option>
+                                <option value="6">6</option>
+                                <option value="7">7</option>
+                                <option value="8">8</option>
+                            </select>
+                        </div>
+                        <input type="submit" class="btn btn-primary" value="Submeter">
+                    </form>
+                </div>
+                <div class="col-sm-7">
+                    <h5>Carregar dados no sistema com planilhas</h5>
+                    <form method="post" action="{% url 'process_file' %}" enctype="multipart/form-data">
+                        {% csrf_token %}
+                        <div class="mb-3">
+                        <label for="inputFile" class="form-label">Escolha a planilha para upload</label>
+                        <input type="file" class="form-control" id="inputFile" name="excel_file">
+                        </div>
+                        <div class="mb-3">
+                        <label for="inputType" class="form-label">Tipo de Planilha</label>
+                        <select class="form-select" id="inputType" name="excel_type">
+                            <option value="pref_disc_hro">Preferências de Disciplinas e Horários</option>
+                            <option value="pref_hro_2">Preferências de Horário para o 2º semestre</option>
+                        </select>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Enviar</button>
+                    </form>
+                </div>
             </div>
-            <input type="submit" class="btn btn-primary" value="Submeter">
-        </form>
-        <hr>
-        <hr>
+            <hr>
+        </div>  
+
+        <div class="container mt-4 mb-4">
+            <div class="row">
+                <div class="col-sm-7">
+                    <h5>Planilhas de distribuição e atribuição</h5>
+                    <h6>O conteúdo terá os dados mais atuais gravados no sistema</h6>
+                    <form method="POST" action="{% url 'download_zip_planilhas'%}">
+                        {% csrf_token %}
+                        <button type="submit" class="mt-3 btn btn-success">Baixar</button>
+                    </form>
+                </div>
+            </div>
+            <hr>
+        </div>
         
-        <h4>Carregar dados no sistema com planilhas</h4>
-        <form method="post" action="{% url 'process_file' %}" enctype="multipart/form-data">
-            {% csrf_token %}
-            <div class="mb-3">
-            <label for="inputFile" class="form-label">Escolha a planilha para upload</label>
-            <input type="file" class="form-control" id="inputFile" name="excel_file">
-            </div>
-            <div class="mb-3">
-            <label for="inputType" class="form-label">Tipo de Planilha</label>
-            <select class="form-select" id="inputType" name="excel_type">
-                <option value="pref_disc_hro">Preferências de Disciplinas e Horários</option>
-                <option value="pref_hro_2">Preferências de Horário para o 2º semestre</option>
-            </select>
-            </div>
-            <button type="submit" class="btn btn-primary">Enviar</button>
-        </form>         
-        <hr>
-        <hr>
-        <h4>Fazer download das planilhas com as informações do sistema</h4>
-        <form method="POST" action="{% url 'download_zip_planilhas'%}">
-            {% csrf_token %}
-            <button type="submit" class="mt-3 btn btn-success">Baixar</button>
-        </form>
-        {% comment %}         
-        <form method="POST" action="{% url 'listar_pendencias'%}">
+          
+        {% comment %} <form method="POST" action="{% url 'listar_pendencias'%}">
             {% csrf_token %}
             <button type="submit" class="mt-3 btn btn-success">Pendências</button>
-        </form> {% endcomment %}
+        </form>  {% endcomment %}
+        
+        <div class="container mt-4 mb-4">
+            <div class="row">
+                <div class="col-sm-6">
+                    <label for="tableSelector"><h5>Pendências:</h5></label>
+                    <select id="tableSelector" class="form-control">
+                        <option value="">Selecione</option>
+                        <option value="pend_impar">Professores com menos de 8 horas (Ímpar)</option>
+                        <option value="pend_par">Professores com menos de 8 horas (Par)</option>
+                        <option value="disc_sem_turma">Disciplinas obrigatórias sem turmas alocadas</option>
+                    </select>
+                </div>
+            </div>
+        </div>        
+         
+        
+        <div class="container d-none" id="pend_impar">
+            <div class="row">
+                <div class="col-sm-8">
+                    <p>*CH = carga horária já registrada no sistema</p>
+                    <table class="table table-bordered table-hover">
+                        <thead>
+                            <th scope="col">Nome</th>
+                            <th scope="col">CH Ímpar</th>
+                        </thead>
+                        <tbody>
+                            {% for nome, values in falta_aula.items%}  
+                            <tr>
+                                <th scope="row">{{nome}}</th>
+                                <td>{{ values.I }}</td>
+                            </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
 
+        <div class="container d-none" id="pend_par">
+            <div class="row">
+                <div class="col-sm-8">
+                    <p>*CH = carga horária já registrada no sistema</p>
+                    <table class="table table-bordered table-hover">
+                        <thead>
+                            <th scope="col">Nome</th>
+                            <th scope="col">CH Par</th>
+                        </thead>
+                        <tbody>
+                            {% for nome, values in falta_aula.items%}  
+                            <tr>
+                                <th scope="row">{{nome}}</th>
+                                <td>{{ values.P }}</td>
+                            </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+       
+        <div class="container d-none" id="disc_sem_turma">
+            <div class="row">
+                <div class="col-sm-12">    
+                    <table class="table table-bordered table-hover">
+                        <thead>
+                            <th scope="col" class="align-middle" >Nome</th>
+                            <th scope="col" class="align-middle" >Abreviação</th>
+                            <th scope="col" class="align-middle" >Turma(s) faltando</th>
+                            <th scope="col" class="align-middle" >Semestre</th>
+                        </thead>
+                        <tbody>
+                            <th colspan="4" class="table-secondary p-2 text-center">ÍMPAR</th>
+                            {% for inf_dict in sem_tur.values%}
+                            {% if inf_dict.smt == "impar" %}  
+                            <tr>
+                                <td>{{ inf_dict.disc.NomeDisc}}</td>
+                                <td>{{ inf_dict.disc.Abreviacao }}</td>
+                                <td>{{ inf_dict.faltando }}
+                                <td>{{ inf_dict.disc.SemestreIdeal }}</td>
+                            </tr>
+                            {% endif%}
+
+                            {% endfor %}
+                            <th colspan="4" class="table-secondary p-2 text-center">PAR</th>
+                            {% for inf_dict in sem_tur.values%}
+                            {% if inf_dict.smt == "par" %}  
+                            <tr>
+                                <td>{{ inf_dict.disc.NomeDisc}}</td>
+                                <td>{{ inf_dict.disc.Abreviacao }}</td>
+                                <td>{{ inf_dict.faltando }}
+                                <td>{{ inf_dict.disc.SemestreIdeal }}</td>
+                            </tr>
+                            {% endif%}
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+        
     </div>
 
 </body>
-</html>  
+</html>
+
+
+<script>
+    $(document).ready(function() {
+        $('#tableSelector').change(function() {
+            const selectedTable = $(this).val();
+            $('#pend_impar, #pend_par, #disc_sem_turma').addClass('d-none');
+            if (selectedTable !== "") {
+                console.log(selectedTable)
+                $('#' + selectedTable).removeClass('d-none');
+            }
+        });
+    });
+ </script>
+
+
+
+
