--- a/table/static/table/css/index.css
+++ b/table/static/table/css/index.css
@@ -16,6 +16,7 @@
     font-size: 14px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
+
 .custom-border td {
     border-color: #C0C0C0;
     border-width: 3px; 
@@ -41,6 +42,7 @@
     left: 0;
     width: 100%;
     height: 100%;
+    z-index: 1;
     background-color: rgba(0, 0, 0, 0.7);
     font-family: inherit;
 }
