--- a/table/templates/table/menu.html
+++ b/table/templates/table/menu.html
@@ -12,10 +12,12 @@
 </head>
 <body>
     <div style="width:90%;" class="mx-auto">
+        <h1 class="text-center"> Ano Aberto: {{anoAberto}}</h1>
         <div class="container mt-4 mb-4">
             <div class="row">
                 <div class="col-sm-5">
-                    <h5>Menu para seleção da tabela correspondente ao semestre</h5>
+                    <h5>Tabela de grade horária</h5>
+                    
                     <form id="semestreCurso" method="post" action = "redirect" >
                         {% csrf_token %}
                         <div class="form-group">
@@ -31,11 +33,23 @@
                                 <option value="8">8</option>
                             </select>
                         </div>
+                        <h6>Na seleção de um ano diferente do ano aberto, 
+                            a tabela de grade horária somente será para visualização.
+                        </h6>
+                        <div class="form-group">
+                            <select required="required" class="form-control" name="anoSelecionado" id="ano">
+                                {% for ano in anos_ant %}
+                                <option value="{{ano}}">{{ano}}</option>
+                                {% endfor%}
+                                <option selected value="{{anoAberto}}">{{anoAberto}}</option>
+                            </select>
+                        </div>
                         <input type="submit" class="btn btn-primary" value="Submeter">
                     </form>
                 </div>
                 <div class="col-sm-7">
                     <h5>Carregar dados no sistema com planilhas</h5>
+                    <p>Obs: Os dados somente valerão para o ano aberto
                     <form method="post" action="{% url 'process_file' %}" enctype="multipart/form-data">
                         {% csrf_token %}
                         <div class="mb-3">
@@ -60,9 +74,17 @@
             <div class="row">
                 <div class="col-sm-7">
                     <h5>Planilhas de distribuição e atribuição</h5>
-                    <h6>O conteúdo terá os dados mais atuais gravados no sistema</h6>
+
                     <form method="POST" action="{% url 'download_zip_planilhas'%}">
                         {% csrf_token %}
+                        <div class="form-group">
+                            <select required="required" class="form-control" name="ano_xlsx" id="ano_xlsx">
+                                {% for ano in anos_ant %}
+                                <option value="{{ano}}">{{ano}}</option>
+                                {% endfor%}
+                                <option selected value="{{anoAberto}}">{{anoAberto}}</option>
+                            </select>
+                        </div>
                         <button type="submit" class="mt-3 btn btn-success">Baixar</button>
                     </form>
                 </div>
@@ -70,16 +92,11 @@
             <hr>
         </div>
         
-          
-        {% comment %} <form method="POST" action="{% url 'listar_pendencias'%}">
-            {% csrf_token %}
-            <button type="submit" class="mt-3 btn btn-success">Pendências</button>
-        </form>  {% endcomment %}
         
         <div class="container mt-4 mb-4">
             <div class="row">
                 <div class="col-sm-6">
-                    <label for="tableSelector"><h5>Pendências:</h5></label>
+                    <label for="tableSelector"><h5>Pendências {{anoAberto}}:</h5></label>
                     <select id="tableSelector" class="form-control">
                         <option value="">Selecione</option>
                         <option value="pend_impar">Professores com menos de 8 horas (Ímpar)</option>
