--- a/table/templates/table/rp1Table.html
+++ b/table/templates/table/rp1Table.html
@@ -21,6 +21,8 @@
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+
     <title>RP1</title>
 
 </head>
@@ -34,5 +36,45 @@
 
         <button type="submit" class="btn btn-primary">Enviar</button>
     </form>
+
+    <table class="table table-bordered table-hover">
+        <thead>
+            <th scope="col" class="align-middle" >TURMA</th>
+            <th scope="col" class="align-middle" >HORARIO</th>
+            <th scope="col" class="align-middle" >CURSOS</th>
+            <th scope="col" class="align-middle" >DOCENTES</th>
+            <th scope="col" class="align-middle  text-nowrap">Profs SI</th>
+            <th scope="col" class="align-middle"> Adicionar</th>
+        </thead>
+        <tbody>
+            {% for query in rp1%}
+            <tr>
+                <td>{{ query.codigo}}</td>
+
+                {% for d in query.diaaularp1_set.all%}
+                <td>{{ d.dia_semana }} {{d.horario}}</td>
+                {% endfor%}
+                
+                <td>{{ query.cursos }}
+                <td>{{ query.profs_adicionais }}</td>
+                <td id="si_profs"></td>
+                <td class="align-middle text-center" style="font-size: 2em;">
+                    <i class="bi bi-plus icone"></i>
+                </td>
+            </tr>
+            {%endfor%}
+        </tbody>
+    </table>
 </body>
 </html>
+<script>
+    $(document).ready(function() {
+        $(".icone").mouseover(function() {
+            $(this).css("color", "blue");
+        });
+    
+        $(".icone").mouseout(function() {
+            $(this).css("color", "");
+        });
+    });
+</script>
